# AIConverse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/components/: chat.py  sidebar.py
src/pages/: analytics.py
src/utils/: gemini_client.py  storage.py
